--- a/src/app/currency-pln/currency-pln.component.html
+++ b/src/app/currency-pln/currency-pln.component.html
@@ -1,3 +1,11 @@
-<div class="currency-pln">
-<span class="btc">BTC/PLN</span>{{ticker.average}}
+<div class="currencies-container">
+  <div class="currency-btc-value">
+    <span class="currency">BTC/PLN</span>{{tickerBtcPln.average}}
+  </div>
+  <div class="currency-lsk-eth-value">
+    <span class="currency">LSK/PLN</span>{{tickerLskPln.average}}
+  </div>
+  <div class="currency-lsk-eth-value">
+    <span class="currency">ETH/PLN</span>{{tickerEthPln.average}}
+  </div>
 </div>
