--- a/src/app/features/features.component.html
+++ b/src/app/features/features.component.html
@@ -1,2 +1,3 @@
-
-<button class="btn btn-primary container" (click)="gotoCurrencies()">Currencies</button>
+<div class="d-flex justify-content-center features-container">
+<button class="btn btn-primary align-self-center" (click)="gotoCurrencies()">Currencies</button>
+</div>
