--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,15 @@
-<form class="col-md-3">
-    <form (ngSubmit)="onSubmit()" #LoginForm="ngForm" autocomplete="off">
-  <div class="form-group">
-    <label for="email">e-mail</label>
-    <input type="text" class="form-control" id="email" required
-    [(ngModel)]="model.email" name="email" #password="ngModel">
-  </div>
-  <div class="form-group">
-    <label for="password">password</label>
-    <input type="text" class="form-control" id="password" required
-    [(ngModel)]="model.password" name="password" #password="ngModel">
-  </div>
-  <button type="submit" class="btn btn-primary" (click)="login()">Submit</button>
-</form>
+<div class="d-flex justify-content-center login-container">
+  <form class="form" (ngSubmit)="onSubmit()" #LoginForm="ngForm" autocomplete="off">
+    <div class="form-group">
+      <label for="email">e-mail</label>
+      <input type="text" class="form-control" id="email" required [(ngModel)]="model.email" name="email"
+        #password="ngModel">
+    </div>
+    <div class="form-group">
+      <label for="password">password</label>
+      <input type="text" class="form-control" id="password" required [(ngModel)]="model.password" name="password"
+        #password="ngModel">
+    </div>
+    <button type="submit" class="btn btn-primary" (click)="submit()">Submit</button>
+  </form>
+</div>
