--- a/src/app/page404/page404.component.html
+++ b/src/app/page404/page404.component.html
@@ -1,3 +1,3 @@
-<p>
-  page404 works!
-</p>
+<div class="d-flex justify-content-center features-container">
+    <a routerLink="/features"><button class="btn btn-primary">Features</button></a>
+  </div>
