--- a/src/app/currency-usd/currency-usd.component.html
+++ b/src/app/currency-usd/currency-usd.component.html
@@ -1,5 +1,5 @@
 <div class="currency-container">
 <div class="currency-usd">
-    <span class="btc">BTC/USD</span>{{tickerBtcUsd.average}}
+    <span class="btc">BTC/USD</span>{{(tickerBtcUsd.average/usd).toFixed(1)}}
 </div>
 </div>
