--- a/src/app/currency-usd/currency-usd.component.html
+++ b/src/app/currency-usd/currency-usd.component.html
@@ -1,5 +1,2 @@
-<div class="currency-container">
-<div class="currency-usd">
-    <span class="btc">BTC/USD</span>{{(tickerBtcUsd.average/usd).toFixed(1)}}
-</div>
-</div>
+ <span class="currency">{{currency}}</span>{{ticker}}
+
