--- a/src/app/currency-usd/currency-usd.component.css
+++ b/src/app/currency-usd/currency-usd.component.css
@@ -1,5 +1,6 @@
-.currency-usd {
+:host.currency-usd {
     padding: 8px;
+    margin-bottom: 20px;
     background-color: green;
     font-size: 1.2rem;
     font-weight: 500;
@@ -7,7 +8,20 @@
     width: 190px;
     text-align: start;
 }
-.btc {
+
+:host.currency-usd-lsk-eth-value {
+    padding: 8px;
+    margin-bottom: 20px;
+    background-color: green;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color:black;
+    width: 190px;
+    text-align: start;
+}
+
+.currency {
     color: black;
     padding-right: 10px;
+
 }
